pkg/lang/testdata/ub/constraints/valid/check-required-with.ub
constraints: [
  { kind: required-with, fields: [input.trigger, input.dep1, input.dep2] },
]
