pkg/lang/testdata/ub/constraints/invalid/mutually-exclusive.ub
constraints: [
  { kind: mutually-exclusive, fields: [input.a, input.b] },
]
